--- a/pom.xml
+++ b/pom.xml
@@ -123,22 +123,39 @@
             <version>2.0.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.suning.fms</groupId>
-            <artifactId>com.ibm.mq</artifactId>
-            <version>6.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.suning.fms</groupId>-->
+            <!--<artifactId>com.ibm.mq</artifactId>-->
+            <!--<version>6.0</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>com.suning.fcsp</groupId>
-            <artifactId>com.ibm.mq</artifactId>
-            <version>6.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.suning.fcsp</groupId>-->
+            <!--<artifactId>com.ibm.mq</artifactId>-->
+            <!--<version>6.0</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>javax.resource</groupId>
             <artifactId>javax.resource-api</artifactId>
             <version>1.7</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.openjdk.jmh</groupId>-->
+            <!--<artifactId>jmh-core</artifactId>-->
+            <!--<version>1.9.3</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.12</version>
         </dependency>
 
     </dependencies>
